system/assets/sample-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
  annotation:
    # 一番最初に作成されるべき。
    argocd.argoproj.io/sync-wave: "-1"
