system/assets/sample-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-app
  namespace: app
  labels:
    app.kubernetes.io/name: fast-api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: fast-api-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fast-api-app
    spec:
      serviceAccountName: app-sa
      containers:
        - name: fastapi
          image: 176032258835.dkr.ecr.ap-northeast-1.amazonaws.com/blue-green-ecr:v1.0.0
          ports:
            - containerPort: 8080
